--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mernpractice",
+  "name": "mernPractice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,11 @@
     "react-dom": "^16.2.0",
     "webpack": "^3.10.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  },
   "scripts": {
     "webpack": "webpack"
   },
